--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
                 </a>
 
                 <!-- Github -->
-                <a class="btn btn-outline-light btn-floating m-1" href="" role="button">
+                <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/amary1/amary1.github.io" role="button">
                     <i class="fab fa-github"></i>
                 </a>
 
