--- a/Children.html
+++ b/Children.html
@@ -180,7 +180,7 @@
                     </a>
 
                     <!-- Github -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/amary1/amary1.github.io" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/amary1/" role="button">
                         <i class="fab fa-github"></i>
                     </a>
 
