--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
     <section class="section-bg" id="aboutus">
 
     <div class="py-5">
-        <p class="font-weight-bold h2 text-center text-info pt-5"> About Us</p>
+        <p class="font-weight-bold h2 text-center text-info"> About Us</p>
         <div class="container ">
-            <p class=" h2 text-center text-white pb-5">
+            <p class=" h2 text-center text-white ">
                 Our mission is to be your go-to resource for all things cats, offering valuable insights, expert advice, and delightful anecdotes about these captivating creatures. Whether you're a seasoned cat parent, a curious admirer, or a prospective cat owner, our site is designed to be your trusted companion on your feline journey.
 
             </p>
